<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_breeds">

    <fragment
        android:id="@+id/navigation_breeds"
        android:name="com.swordhealth.awesomedogs.ui.breeds.BreedsFragment"
        android:label="@string/bottom_navigation_breeds"
        tools:layout="@layout/fragment_breeds">
        <action
            android:id="@+id/action_navigation_breeds_to_navigation_breed_detail"
            app:destination="@id/navigation_breed_detail">
            <argument
                android:name="breed_id"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.swordhealth.awesomedogs.ui.search.SearchFragment"
        android:label="@string/bottom_navigation_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_navigation_search_to_navigation_breed_detail"
            app:destination="@id/navigation_breed_detail">
            <argument
                android:name="breed_id"
                app:argType="integer" />
        </action>
    </fragment>

    <dialog
        android:id="@+id/navigation_breed_detail"
        android:name="com.swordhealth.awesomedogs.ui.breeddetail.BreedDetailFragment"
        android:label="@string/breed_detail_label"
        tools:layout="@layout/fragment_breed_detail" />
</navigation>